--- a/stream-service/pyproject.toml
+++ b/stream-service/pyproject.toml
@@ -12,6 +12,7 @@ oandapyV20 = "^0.7.2"
 requests = "^2.31.0"
 python-dotenv = "^1.0.0"
 six = "^1.16.0"
+psycopg2-binary = "^2.9.7"
 
 
 [build-system]
