--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [tool.poetry]
-name = "stream-service"
+name = "project-foresight"
 version = "0.1.0"
-description = "Service which streams data into the data store"
+description = "Continuous integration of market data, analysis, and presentation."
 authors = ["Alexander Whipp <alexruns4@gmail.com>"]
 readme = "README.md"
-packages = []
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -13,7 +12,7 @@ requests = "^2.31.0"
 python-dotenv = "^1.0.0"
 six = "^1.16.0"
 psycopg2-binary = "^2.9.7"
-
+pandas = "^2.1.0"
 
 [build-system]
 requires = ["poetry-core"]
