--- a/example.env
+++ b/example.env
@@ -1,7 +1,10 @@
 OANDA_API_ACCOUNT_ID=
 OANDA_API_TOKEN=
+
 TIMESCALE_HOST=
 TIMESCALE_PORT=
 TIMESCALE_DB=
 TIMESCALE_USER=
 TIMESCALE_PASSWORD=
+
+AWS_ENDPOINT_URL=http://localhost:4566
