--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ python-dotenv = "^1.0.0"
 six = "^1.16.0"
 psycopg2-binary = "^2.9.7"
 pandas = "^2.1.0"
+boto3 = "^1.28.44"
+boto3-type-annotations = "^0.3.1"
 
 [build-system]
 requires = ["poetry-core"]
