feat: :sparkles: Adding updates for MA as well as instrument pricing indicator
Needed in order to start showing 2 indicators working together

--- a/example.env
+++ b/example.env
@@ -1,10 +1,10 @@
 OANDA_API_ACCOUNT_ID=
 OANDA_API_TOKEN=
 
-TIMESCALE_HOST=
-TIMESCALE_PORT=
-TIMESCALE_DB=
-TIMESCALE_USER=
-TIMESCALE_PASSWORD=
+TIMESCALE_HOST=127.0.0.1
+TIMESCALE_PORT=5432
+TIMESCALE_DB=project_foresight
+TIMESCALE_USER=postgres
+TIMESCALE_PASSWORD=postgres
 
 AWS_ENDPOINT_URL=http://localhost:4566
