--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ psycopg2-binary = "^2.9.7"
 pandas = "^2.1.0"
 boto3 = "^1.28.44"
 boto3-type-annotations = "^0.3.1"
+flask = "^2.3.3"
 
 [build-system]
 requires = ["poetry-core"]
