feat: :sparkles: Adding a random walk for local development

--- a/example.env
+++ b/example.env
@@ -1,6 +1,8 @@
 OANDA_API_ACCOUNT_ID=
 OANDA_API_TOKEN=
 
+APP_RANDOM_WALK=True
+
 TIMESCALE_HOST=127.0.0.1
 TIMESCALE_PORT=5432
 TIMESCALE_DB=project_foresight
