--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   localstack:
     image: localstack/localstack
@@ -29,7 +29,6 @@ services:
 networks:
   foresight_network:
     driver: bridge
-
 
 volumes:
   timescaledb_data:
