--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "project-foresight"
+name = "foresight"
 version = "0.1.0"
 description = "Continuous integration of market data, analysis, and presentation."
-authors = ["Alexander Whipp <alexruns4@gmail.com>"]
+authors = ["awhipp"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -26,12 +26,8 @@ profile = "black"
 force_single_line = true
 lines_after_imports = 2
 
-[tool.mypy]
-strict = true
-warn_unreachable = true
-pretty = true
-show_column_numbers = true
-show_error_context = true
+[tool.flake8]
+max-line-length = 160
 
 [build-system]
 requires = ["poetry-core"]
