--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -12,9 +12,28 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        with: 
+        with:
           fetch-depth: "0"
-          
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+
+      - name: Install and Configure poetry
+        run: |
+          python -m pip install poetry==1.8.2
+          python -m poetry config virtualenvs.in-project true
+
+      - name: Cache the virtualenv
+        uses: actions/cache@v4
+        with:
+          path: ./.venv
+          key: ${{ runner.os }}-venv-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Install dependencies
+        run: python -m poetry install
+
       - name: Analyze Commit Messages and Bump Version
         run: |
           # Custom script to analyze commit messages and determine version bump
