--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -20,10 +20,12 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Install and Configure poetry
+      - name: Install and Configure Poetry & Git Credentials
         run: |
           python -m pip install poetry==1.8.2
           python -m poetry config virtualenvs.in-project true
+          git config --global user.email "github.actions.runner@fake.email.com"
+          git config --global user.name "Github Actions Runner"
 
       - name: Cache the virtualenv
         uses: actions/cache@v4
