fix: :bug: Add GH user/email to action

--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -24,8 +24,6 @@ jobs:
         run: |
           python -m pip install poetry==1.8.2
           python -m poetry config virtualenvs.in-project true
-          git config --global user.email "github.actions.runner@fake.email.com"
-          git config --global user.name "Github Actions Runner"
 
       - name: Cache the virtualenv
         uses: actions/cache@v4
@@ -37,6 +35,9 @@ jobs:
         run: python -m poetry install
 
       - name: Analyze Commit Messages and Bump Version
+        env:
+          GH_USER_EMAIL: ${{ secrets.GH_USER_EMAIL }}
+          GH_USER_NAME: ${{ secrets.GH_USER_NAME }}
         run: |
           # Custom script to analyze commit messages and determine version bump
           ## Stored in .github/analyze_git_history.py
@@ -57,5 +58,7 @@ jobs:
 
           # Commit the version change
           git add pyproject.toml
+          git config --global user.email "$GH_USER_EMAIL"
+          git config --global user.name "$GH_USER_NAME"
           git commit -m "chore: Bump version ($version_bump)"
           git push origin main
