--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -35,9 +35,6 @@ jobs:
         run: python -m poetry install
 
       - name: Analyze Commit Messages and Bump Version
-        env:
-          GH_USER_EMAIL: ${{ secrets.GH_USER_EMAIL }}
-          GH_USER_NAME: ${{ secrets.GH_USER_NAME }}
         run: |
           # Custom script to analyze commit messages and determine version bump
           ## Stored in .github/analyze_git_history.py
@@ -58,7 +55,7 @@ jobs:
 
           # Commit the version change
           git add pyproject.toml
-          git config --global user.email "$GH_USER_EMAIL"
-          git config --global user.name "$GH_USER_NAME"
+          git config --global user.email "GitHubActionRunner@fake.email.com"
+          git config --global user.name "Github Action Runner"
           git commit -m "chore: Bump version ($version_bump)"
           git push origin main
