--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   localstack:
-    image: localstack/localstack
+    image: localstack/localstack:3.2.0
     container_name: localstack
     environment:
       - SERVICES=sqs,s3
