--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pydantic = "^2.6.3"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.2"
 pytest = "^7"
+pytest-cov = "^5.0.0"
 
 [tool.isort]
 profile = "black"
