fix: :green_heart: Fixing build and adding README action flags

--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Build stack
-      run: docker-compose build -d
+      run: docker-compose up -d
 
     - name: Set up Python
       uses: actions/setup-python@v5
