--- a/example.env
+++ b/example.env
@@ -11,4 +11,8 @@ TIMESCALE_PASSWORD=postgres
 
 AWS_ENDPOINT_URL=http://localhost:4566
 
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=test
+AWS_SECRET_ACCESS_KEY=test
+
 APP_DEBUG=False
