--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,13 @@
         "tests"
     ],
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
+    "conventionalCommits.scopes": [
+        "Stream Service",
+        "Window Service",
+        "Indicator Service",
+        "Interface Service",
+        "Shared Utilities",
+        "Tests"
+    ]
 }
